# VML-TheoraFile

./: .gitignore  CMakeLists.txt  cmake_debug.sh
csharp/: CMakeLists.txt  Theorafile.c  Theorafile.cs  Theorafile.h
lib/theora/: codec.h  tinfo.c
lib/theora/arm-intrinsics/: armcpu.c
